<resources>
    <string name="app_name">Excurrency</string>
    <string name="title_activity_main">Excurrency</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_settings">Settings</string>
    <string name="content_authority" translatable="false">com.excurrency.app</string>
    <string name="select_currencies">Select Currencies</string>
    <string name="pref_schedule_time_label">Schedule in minutes</string>
    <string name="pref_schedule_time_key">schedule</string>

    <string name="pref_currency_convert_to_key">currency_convert_to</string>
    <string name="pref_currency_convert_to_default">TRY</string>

    <string name="pref_currency_country_convert_to_key">currency_country_convert_to</string>
    <string name="pref_currency_country_convert_to_default">turkey</string>


    <string name="pref_schedule_time_one">1</string>
    <string name="pref_schedule_time_five">5</string>
    <string name="pref_schedule_time_ten">10</string>
    <string name="pref_schedule_time_fifteen">15</string>
    <string name="title_activity_detail">Currency Details</string>
    <string name="ask">Ask</string>
    <string name="bid">Bid</string>
    <string name="convert_to_currencies">Convert to</string>

</resources>
