<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <com.excurrency.app.setting.SettingsCurrencySelectDialog
        android:summary=""
        android:title="@string/select_currencies"
        android:key="from_currency"/>

    <com.excurrency.app.setting.SettingsToCurrencySelectDialog
        android:summary=""
        android:title="@string/convert_to_currencies"
        key="to_currency"/>


    <ListPreference
        android:title="@string/pref_schedule_time_label"
        android:key="@string/pref_schedule_time_key"
        android:defaultValue="@string/pref_schedule_time_five"
        android:entryValues="@array/pref_schedule_time_values"
        android:entries="@array/pref_schedule_time_values" />



</PreferenceScreen>